--- a/index.html
+++ b/index.html
@@ -245,25 +245,23 @@
 
     <!-- Contact Section -->
     <footer class="contact" id="contact">
-        <h2>Contact Me</h2>
+        <h2>Get In Touch</h2>
         <div class="contact-content">
             <div class="contact-info">
+                
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
                     <a href="mailto:your.email@example.com">your.email@example.com</a>
                 </div>
                 <div class="contact-item">
-                    <i class="fab fa-linkedin"></i>
-                    <a href="#" target="_blank">LinkedIn</a>
+                    <i class="fas fa-phone"></i>
+                    <a href="tel:+1234567890">+1 (234) 567-890</a>
                 </div>
                 <div class="contact-item">
-                    <i class="fab fa-github"></i>
-                    <a href="#" target="_blank">GitHub</a>
+                    <i class="fas fa-location-dot"></i>
+                    <span>Nairobi, Kenya</span>
                 </div>
-                <div class="contact-item">
-                    <i class="fab fa-youtube"></i>
-                    <a href="#" target="_blank">YouTube</a>
-                </div>
+                
             </div>
             <div class="social-links">
                 <a href="#" class="social-link"><i class="fab fa-github"></i></a>
