--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title> Nickey Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/brands.min.css"/>
 </head>
 <body>
     <!-- Navigation -->
@@ -37,10 +39,10 @@
             <div class="hero-content">
                 
                 <div class="hero-content">
-                    <h2><i class="fab fa-code"></i>Code. 
-                        <i class="fab fa-chart-simple"></i>Analyze. 
-                        <i class="fab fa-person-chalkboard"></i>Teach. 
-                        <i class="fab fa-repeat"></i>Repeat.
+                    <h2><i class="fa-solid fa-code"></i>Code. 
+                        <i class="fa-solid fa-chart-simple"></i>Analyze. 
+                        <i class="fa-solid fa-person-chalkboard"></i>Teach. 
+                        <i class="fa-solid fa-repeat"></i>Repeat.
                     </h2>
                     <br>
                     <p><span>Ombasa Nickey: </span> 
@@ -56,7 +58,7 @@
                     <div class="hero-social-links">
                         <a href="#" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="#" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link" target="_blank"><i class="fab fa-x-twitter"></i></a>
+                        <a href="#" class="social-link" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                         <a href="#" class="social-link" target="_blank"><i class="fab fa-youtube"></i></a>
                         <a href="https://wa.me/254113424946" class="social-link" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
@@ -228,11 +230,11 @@
                 <h3>Data Analysis</h3>
                 <div class="skill-items">
                     <div class="skill-item">
-                        <i class="fab fa-file-excel"></i>
+                        <i class="fa-solid fa-file-excel"></i>
                         <span>Excel</span>
                     </div>
                     <div class="skill-item">
-                        <i class="fab fa-chart-simple"></i>
+                        <i class="fa-solid fa-chart-simple"></i>
                         <span>Tableau</span>
                     </div>
                     <div class="skill-item">
@@ -325,7 +327,7 @@
             <div class="social-links">
                 <a href="https://github.com/ombasanickey" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://linkedin.com/in/ombasa-nickey" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://x.com/NickeyOmbasa" class="social-link" target="_blank"><i class="fab fa-x-twitter"></i></a>
+                <a href="https://x.com/NickeyOmbasa" class="social-link" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="https://youtube.com/@ombasanickey" class="social-link" target="_blank"><i class="fab fa-youtube"></i></a>
                 <a href="https://wa.me/254113424946" class="social-link" target="_blank"><i class="fab fa-whatsapp"></i></a>
             </div>
