--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="nickeybg.jpg" alt="Professional Portrait">
+                <img src="https://ibb.co/v4mY0ym0" alt="Professional Portrait">
             </div>
         </div>
     </section>
