--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Nickey Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg>">
+    <!-- <link rel="icon" type="image/x-icon" href="<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512l388.6 0c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304l-91.4 0z"/></svg> -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css">
@@ -57,10 +57,10 @@
                     </div>
                     <br>
                     <div class="hero-social-links">
-                        <a href="#" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="#" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="social-link" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                        <a href="#" class="social-link" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://github.com/ombasanickey" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://linkedin.com/in/ombasa-nickey" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://x.com/NickeyOmbasa" class="social-link" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href="https://youtube.com/@ombasanickey" class="social-link" target="_blank"><i class="fab fa-youtube"></i></a>
                         <a href="https://wa.me/254113424946" class="social-link" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                     
