--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <i class="fa-solid fa-repeat"></i>Repeat.
                     </h2>
                     <br>
-                    <p><span>Ombasa Nickey: </span> 
+                    <p><span>Ombasa Nickey: </span> <br>
                         <span class="typed-text"></span><span class="cursor">&nbsp;</span>
                     </p>
 
