--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Hello! I'm a passionate developer dedicated to creating innovative solutions...</p>
+                <p>Hello! I'm a passionate developer dedicated to creating innovative solutions, working with data and offering tech..</p>
             </div>
             
             <!-- About Navigation -->
@@ -213,8 +213,8 @@
                         <span>Git</span>
                     </div>
                     <div class="skill-item">
-                        <i class="fab fa-docker"></i>
-                        <span>Docker</span>
+                        <i class="fa solid fa-pen-ruler"></i>
+                        <span>Canva</span>
                     </div>
                     <div class="skill-item">
                         <i class="fas fa-cloud"></i>
