--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <h2>About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Hello! I'm a passionate developer dedicated to creating innovative solutions, working with data and offering tech..</p>
+                <p>Hello! I'm a passionate developer dedicated to creating innovative solutions, working with data and offering tech training...</p>
             </div>
             
             <!-- About Navigation -->
